feat: 模板变量全链路适配 project_id
